# opencv-visualizers

./: .gitignore  .hgignore  COPYING  README.rst  opencv.natvis
addin/: CMakeLists.txt  addin.cpp  addin.rc  export.def  resource.h
opencviz/: COPYING  IMatVisualizerService.cs  MatVisualizerPackage.cs  MatVisualizerService.cs  PreviewForm.Designer.cs  PreviewForm.cs  PreviewForm.resx  Source.extension.vsixmanifest  opencv.xml  opencviz.csproj  opencviz.sln
opencviz/Forms/: PreviewForm.Designer.cs  PreviewForm.cs  PreviewForm.de.resx  PreviewForm.resx  PreviewForm.ru.resx
opencviz/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.de.resx  Resources.resx  Resources.ru.resx
setup/: compile.cmd  configuration.wxi  main.wxs  strings.de-DE.wxl  strings.en-US.wxl
